fix slider images not being aligned

--- a/static/cocoen/cocoen.css
+++ b/static/cocoen/cocoen.css
@@ -3,6 +3,7 @@
   cursor: pointer;
   line-height: 0;
   overflow: hidden;
+  padding: 0;
   position: relative;
   -webkit-user-select: none;
   -moz-user-select: none;
